@@ -28,6 +28,8 @@
       match the one from the memory model; see invoke47.asm - invoke52.asm.
    -  externdef directive: if the symbol was already defined but neither
       internal nor external, no error was emitted; see extern16.asm.
+   -  pointer to data did ignore default distance of memory model; see
+      dsize.asm.
 
    Other changes:
    -  format pe: allow imports by number; see pe10.asm.
